--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,31 @@
+version 0.9.7
+-------------
+	Renaming of the project (Issue 2010-017): The official project name is now
+		Business Process AddOns for Nagios and Icinga
+		up to 0.9.6 it was
+		Nagios Business Process AddOns
+		within this step, many files and directories got new names
+		here comes a complete list of renamings:
+
+		nagiosbp -> bp-addon (directory)
+		nagiosbp-buildfiles -> bp-addon/.buildfiles (directory)
+		nagiosbp-buildroot -> bp-addon-buildroot (directory)
+		bin/nagios-bp-check-ndo-connection.pl -> bin/bp-addon-check-backend-connection.pl
+		bin/nagios-bp-consistency-check.pl -> bin/bp-addon-consistency-check.pl
+		bin/nagios_bp_session_timeout -> bin/bp-addon-session-timeout
+		bin/bp_cfg2service_cfg.pl -> bin/bp-cfg2service-cfg.pl
+		etc/nagios-bp.conf -> etc/business-processes.conf
+		etc/ndo.cfg -> etc/dataBackend.cfg
+		etc/apache-conf.d/nagiosbp.conf -> etc/apache-conf.d/bp-addon.conf
+		etc/cron.d/nagiosbp -> etc/cron.d/bp-addon
+		lib/nagiosBp.pm -> lib/businessProcessFunctions.pm
+		lib/ndodb.pm -> lib/dataBackend.pm
+		sbin/nagios-bp.cgi -> sbin/bp-addon.cgi
+		share/stylesheets/nagios-bp.css -> share/stylesheets/bp-addon.css
+		var/cache/ndo_backend_cache -> var/cache/backend_cache
+		var/nagios_bp.sessions -> var/bp-addon.sessions (directory)
+
+
 version 0.9.6
 -------------
 	Feature Request 2010-003: bp_cfg2service_cfg.pl can optional generate an
@@ -33,6 +61,7 @@ version 0.9.6
 	Bug 2010-011 fixed: most generated HTML pages refresh after a certain
 		amount of time. On error pages this is useless. So took the
 		refresh out.
+
 
 version 0.9.5
 -------------
@@ -126,6 +155,7 @@ version 0.9.3
 		nagios-bp-check-ndo-connection.pl
 		Details see README section "Check if everything works"
 
+
 version 0.9.2
 -------------
 	Feature Request 2007-001: provides an installer now
@@ -172,6 +202,7 @@ version 0.9.1
 	Documentation Update 2008-001: make the AuthUserFile directive (in 
 		httpd.conf) for Nagios Business	Process View by default point to 
 		the same file as Nagios does
+
 
 version 0.9.0
 -------------
