fixed typing error in language files

--- a/share/lang/i18n_de.txt
+++ b/share/lang/i18n_de.txt
@@ -41,7 +41,7 @@ hint_and=Die Anwendung ist f&uuml;r den Kunden verf&uuml;gbar, wenn keine der Ko
 hint_or=Es handelt sich um redundant ausgelegte Komponenten. Die Anwendung ist f&uuml;r den Kunden verf&uuml;gbar, wenn mindestens eine der Komponenten im Status OK oder WARNING ist.
 hint_of=Die Anwendung ist f&uuml;r den Kunden verf&uuml;gbar, wenn mindestens __var1__ der Komponenten im Status OK oder WARNING sind.
 back_to_top=zur&uuml;ck zur obersten Ebene
-bp_head=Buiness Process View
+bp_head=Business Process View
 business_process=Business Prozess
 tree_view=Baumansicht
 info=Info
