--- a/share/lang/i18n_en.txt
+++ b/share/lang/i18n_en.txt
@@ -41,7 +41,7 @@ hint_and=The application is available to the customer, if none of the components
 hint_or=Redundant components. The Application is available to the customer if at least one component is in status OK or WARNING.
 hint_of=The application is available to the customer, if at least __var1__ components are in stats OK oder WARNING.
 back_to_top=Back to the top
-bp_head=Buiness Process View
+bp_head=Business Process View
 business_process=Business Process
 tree_view=Tree view
 info=Info
